--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-5",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config webpack.config.js --hot --open chrome"
   },
