--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --hot --open chrome"
+    "start": "webpack serve"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.3.0",
-    "svg-sprite-loader": "^5.0.0",
-    "svgo-loader": "^2.2.1",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "svg-sprite-loader": "^6.0.9",
+    "svgo": "^2.3.1",
+    "svgo-loader": "^3.0.0",
+    "webpack": "^5.41.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {}
 }
