--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.5.1",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "svg-sprite-loader": "^6.0.9",
